# tsingai-lens

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  README.md  docker-compose.release.yml  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  config.py  env.sh  main.py  pyproject.toml  start_env.sh
backend/api/: README.md  __init__.py
backend/api/routes/: __init__.py  query.py  reports.py
backend/api/schemas/: __init__.py
backend/app/services/: __init__.py  collection_store.py  graphml_export.py  ingest.py
backend/app/usecases/: __init__.py  collections.py  files.py  graphml.py  indexing.py  inputs.py  query.py  reports.py
backend/application/: README.md  __init__.py  artifact_registry_service.py  collection_service.py  graph_service.py  index_run_mode_service.py  index_task_runner.py  protocol_block_service.py  protocol_document_meta_service.py  protocol_extract_service.py  protocol_normalize_service.py  protocol_pipeline_service.py  protocol_search_service.py  protocol_section_service.py  protocol_sop_service.py  protocol_source_service.py  protocol_validate_service.py  query.py  query_service.py  report_service.py  reports.py  task_service.py  workspace_service.py
backend/application/auth/: __init__.py  passwords.py  session_service.py
backend/application/collections/: README.md  __init__.py  service.py
backend/bootstrap/: persistence.py
backend/config/: settings.py
backend/controllers/: auth.py  chat.py  collections.py  comparisons.py  deps.py  documents.py  evidence.py  experiment.py  file.py  goals.py  graph.py  protocol.py  query.py  reports.py  retrieval.py  tasks.py  workspace.py
backend/data/: graph_store.json
backend/docs/: README.md  api.md  backend-application-layer-boundary.md  backend-domain-architecture.md  backend-evidence-first-parsing-plan.md  backend-goal-core-source-implementation-plan.md  backend-goal-core-source-layering.md  backend-ops.md  backend-overview.md  backend-v1-api-contract.md
backend/domain/: __init__.py  document.py  graph.py  ports.py  protocol.py  query.py
backend/graph/: knowledge_graph.py  mindmap.py
backend/graphrag/: builder.py  community.py  prompts.py  retriever.py  schema.py  store.py
backend/infra/: __init__.py
backend/ingest/: chunker.py  loader.py
backend/migrations/: env.py
backend/qna/: __init__.py  rag.py
backend/repositories/: document.py
backend/retrieval/: README.md  __init__.py  __main__.py
backend/scripts/: README.md  export_extraction_trace.py  export_source_tables.py
backend/services/: artifact_registry_service.py  chat_service.py  collection_query_service.py  collection_service.py  document_manager.py  file_service.py  graphrag_service.py  index_run_mode_service.py  index_task_runner.py  llm_client.py  protocol_block_service.py  protocol_extract_service.py  protocol_normalize_service.py  protocol_pipeline_service.py  protocol_search_service.py  protocol_section_service.py  protocol_sop_service.py  protocol_validate_service.py  task_service.py  vector_service.py  workflows.py  workspace_service.py
backend/tests/: README.md  conftest.py  pytest.ini  test_api.py  test_services.py
backend/utils/: chunker.py  keywords.py  logger.py
(+1473 files in other folders)
