[project]
name = "tsingai-lens"
version = "0.3.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.5.2",
    "azure-storage-blob>=12.24.0",
    "devtools>=0.12.2",
    "docling>=2.90.0",
    "environs>=11.0.0",
    "fastapi>=0.115.0",
    "fnllm[azure,openai]>=0.4.1",
    "future>=1.0.0",
    "graspologic>=3.4.1",
    "httpx[socks]>=0.28.1",
    "json-repair>=0.30.3",
    "lancedb>=0.17.0",
    "litellm>=1.77.1",
    "markdown>=3.6",
    "networkx>=3.4.2",
    "nltk==3.9.1",
    "numpy>=1.25.2",
    "openai>=1.68.0",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.24.4",
    "pytest>=9.0.3",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "spacy>=3.8.4",
    "textblob>=0.18.0.post0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "typing-extensions>=4.12.2",
    "umap-learn>=0.5.6",
    "uvicorn[standard]>=0.30.0",
    "yake>=0.4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "WARNING"
log_file_level = "INFO"
